--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "@fastify/cookie": "9.2.0",
     "@fastify/jwt": "7.2.0",
+    "@fastify/static": "6.12.0",
     "@prisma/client": "5.6.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
+    "fastify-multer": "2.0.3",
     "zod": "3.22.4"
   },
   "devDependencies": {
